<resources>
    <string name="app_name">上海洲涛智能大棚</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_modify">编辑</string>
    <string name="icon_temp">&#xE893;</string>
    <string name="icon_menu">&#xE5D2;</string>
    <string name="icon_keyboard_arrow_down">&#xE313;</string>
    <string name="icon_error">&#xE000;</string>
    <string name="icon_check_circle">&#xE86c;</string>
    <string name="update_log_title">更新日志</string>
    <string name="update_log">
		  1.优化本地储存机制，添加大棚管理、温度管理以及报警管理等界面用于用户查看概览或历史信息。\n
		2.夜间模式下将不会报警。\n
		3.修改风口状态改为显示拉动距离，相关电机运转时间改为首档拉动距离和最大拉动距离。\n
        4.添加欢迎界面和引导界面。\n
		5.将风口可设置数目修改为2-8路。\n
		6.优化UI，添加夜间模式效果。
		7.添加报警温度及推送温度时间的设定与同步。</string>
	<string name="tip_save_image_suc">图片已保存(手机相册-> saveImg)</string>
	<string name="tip_save_image_faile">无法保存图片</string>
	<string name="tip_load_image_faile">加载图片失败</string>
	<string name="down_state">正在下载：%s</string>
	<string name="copy_success">复制成功</string>
    <string name="help_title_precautions">注意事项</string>
    <string name="help_title_net_temp">网络读取温度</string>
    <string name="help_title_net_win">网络控制窗口</string>
    <string name="help_title_net_relink">重新连接网络</string>
    <string name="help_title_net_diagnosis">网络诊断功能</string>
    <string name="help_title_net_alarm">智能报警功能</string>
    <string name="help_title_net_mode">网络控制切换控制模式</string>
    <string name="help_title_net_syn">同步参数功能</string>
    <string name="help_title_net_ven">一键通风功能</string>
    <string name="help_title_msg_temp">短信控制读取温度</string>
    <string name="help_title_msg_control">短信控制功能</string>
    <string name="help_title_msg_cmd">短信指令</string>
    <string name="help_title_setting">参数配置</string>
    <string name="help_title_set_win">窗口数量设置</string>
    <string name="help_title_set_house">多大棚管理功能</string>
    <string name="help_title_share">分享功能</string>
    <string name="help_title_set_function">功能设置</string>
    <string name="help_content_precautions">(1) 软件使用时，请先配置主手机号码（即本机号码）以及温控机手机号码，然后会自动匹配网络连接温控机。\r\n
		(2) 网络控制通过网络进行控制，这将会使用一定量的数据流量，请注意打开数据连接。\r\n
		(3) 短信控制通过短信进行控制，这将会发送短信来达到控制的目的。部分手机会有权限提示，需要允许本软件发送及读取短信的权限才能正常工作。\r\n
		(4) 软件应使用自己的手机号码，同时一个手机号码只能有一个在线，若其他地方使用该号码登录则会将上一个地点自动离线。\r\n
		(5) 手机端可以添加多个大棚进行同时操作，若添加了多个大棚，则在哪个大棚的选项卡之下，所有的操作都是针对该大棚的。若要操作其他大棚则需要切换大棚选项卡的选项。\r\n
		(6) 我们不做任何形式的保证, 因网络状况、通讯线路、服务器当机、自然灾害等非可抗力因素而导致用户不能正常使用或温控机不能正常工作，我们也不承担任何法律责任。\r\n
	</string>
	<string name="help_content_net_temp">
	1.首先配置好主手机号以及温控机号码。\r\n
	2.在网络控制界面点击读取温度按钮，这样温控机就会将当前温度及风口状态发送至手机，然后手机就会在显示区域显示当前温度以及风口状态信息。 同时最后收到温度时间也会更新到新的时间 。\r\n
	3.当手机收到来自温控机的温度信息之后，会在通知栏中显示大棚、温度信息以及风口状态信息。\r\n
	</string>
	<string name="help_content_net_win">
	1.首先配置好主手机号以及温控机号码。\r\n
	2.在网络控制界面勾选需要操作的窗口。 \r\n
	3.根据控制类型点击不同的控制按钮。\r\n
	</string>
	<string name="help_content_net_relink">
	1.连接状态区域显示当前与服务器的连接状态，正常连接上服务器则显示已连接上网络。 当显示未连接时表示与服务器断开连接，请点击重连按钮进行重连，若还是不能连接请使用网络诊断功能。\r\n
	</string>
	<string name="help_content_net_diagnosis">
	1.当长时间失去某个大棚温控机的响应时，会显示失去连接的通知，点击最右边的按钮，可以关闭该通知，点击该通知其他位置则会打开网络诊断功能诊断当前网络的问题所在。\r\n
	2.也可以在网络诊断功能区域手动点击按钮来启动网络诊断功能。\r\n
	3.当开启网络诊断功能后，会依次对本地网络状况以及和服务器的连接以及温控机的连接进行检查 。\r\n
	4.当检查完毕后会提示本次诊断的结果供用户参考。\r\n
	</string>
	<string name="help_content_net_alarm">
	1.温控机会去定时检查温度，当连续10分钟温度过高或过低或无法读取到，那么就会向客户的手机端发送网络报警消息，同时发送一条报警短信。
	三次之后会增加到每半小时报一次警。当能正常收到消息会重置报警次数，下次出现报警依然会是连续10分钟异常触发报警。\r\n
	2.当某一条链路无法连通时也会发出报警，报警机制与之前相同，若所有链路都不同则可能是停电所致。\r\n
	3.当温控机在接电状态下失去电源会触发一个停电报警，该报警一次只发一次，但是在下次接电后再次停电会再次产生一个停电报警。\r\n
	4.当手机收到报警后会产生一个通知并发出报警声音，每个大棚独立拥有一个报警通知以保证不会被其他大棚的报警覆盖。\r\n
	5.报警通知会显示是哪个大棚发来的报警，显示在“来自”之后。\r\n
	</string>
	<string name="help_content_net_mode">
	1.切换按钮为蓝色和显示自动模式表示现在正处于自动模式，切换按钮为灰色和显示手动模式表示现在正处于手动模式。\r\n
	2.点击可以将模式相互转换。\r\n
	</string>
	<string name="help_content_net_syn">
	1.点击同步按钮即可将参数设置中除温控机号码及主手机号码之外所有数据都同步到温控机端。\r\n
	2.点击按钮后会显示一个确认框，确认同步则点击确定进行同步。 \r\n
	</string>
	<string name="help_content_net_ven">
	1.点击 通风按钮则会使温控机进入通风模式，通风模式下会将模式自动改为手动模式，在通风模式下会自动将风口打开四分之一，在通风时间之后会自动关闭。\r\n
	2.注意，在通风模式下，手机不能够对风口进行放，关，停以及模式更改。若想提前结束通风模式，只需使用下雨关风功能即可，该功能会直接结束通风模式并关窗。
	当通风模式刚开启，开窗电机正在运转时不可使用下雨关风功能，必须在电机运行结束后才可以使用。\r\n
	3.注意，通风模式下温控机仍可以照常控制，也可以在温控机右下角点击关闭通风模式。\r\n
	</string>
	<string name="help_content_msg_temp">
	1.点击读取温度按钮，手机就会向温控机发送一条读取温度的短信，当温控机收到此短信后就会发回一条当前温度的短信，
	软件识别到此短信后就会显示在温度显示区域，部分手机需要授权发送和读取短信权限才能使用此功能。\r\n
	</string>
	<string name="help_content_msg_control">
	1.短信控制下需要关闭窗户则可以直接点击一键关闭按钮，手机会向温控机发送一条短信，温控机收到短信后会将所有窗户关闭1/4。\r\n
	2.短信控制下需要打开窗户则可以直接点击一键打开按钮，手机会向温控机发送一条短信，温控机收到短信后会将所有窗户打开1/4。\r\n
	3.短信控制下需要停止电机则可以直接点击一键停止按钮，手机会向温控机发送一条短信，温控机收到短信后会将所有电机停止运转。\r\n
	4.短信控制下需要直接关死窗口或者下雨需要立即关闭窗口，则可以直接点击下雨关窗功能下的关闭按钮，手机会向温控机发送一条短信，温控机收到短信后会将所有窗户关死。\r\n
	5.短信控制下需要切换控制模式，则可以在短信控制模式功能中选择 需要切换的模式，选择后点击发送设置按钮，手机会向温控机发送一条短信，温控机收到短信后会将控制模式改为选择的相应模式。\r\n
	</string>
	<string name="help_content_msg_cmd">
	1.若手机无法安装客户端或者暂未安装客户端，则可以通过普通手机直接发送短信到温控机实现控制。\r\n\r\n
	2.命令介绍(双引号内为短信命令，后面为命令介绍)：\r\n
		2.1：“查看”	 ->查询所有窗口的温度、窗口打开长度发送短信到手机；\r\n
		2.2：“下雨”	 ->将所有窗口关死并进入手动模式（若要停止下雨关窗则直接发送停止全部命令）；\r\n
		2.3：“温度手动”	 ->将控制模式切为手动；\r\n
		2.4：“温度自动”	->将控制模式切为自动；\r\n
		2.5：“关闭1236”	->存在关闭字眼，后面跟数字则将对应的编号窗口1、2、3、6关闭，若不存在数字则默认全部关闭，例如输入关闭或关闭全部都将关闭所有窗口；\r\n
		2.6：“打开135”	->存在打开字眼，后面跟数字则将对应的编号窗口1、3、5打开，若不存在数字则默认全部打开，例如输入打开或打开全部都将打开所有窗口；\r\n
		2.7：“停止246”	->存在停止字眼，后面跟数字则将对应的编号窗口2、4、6电机停止运转，若不存在数字则默认全部停止，例如输入停止或停止全部都将停止所有窗口；\r\n
		2.8：“开至最大”	->将所有窗口打开到最大距离（开窗直至设置最大长度）；\r\n
		2.9：“放晨风25”	->打开所有窗口1档，放晨风时间25分钟（没有数字，默认为平板设定时间）；\r\n
		2.10：“结束放晨风”	->关闭通风状态，同时结束电机运转然后自动进行下雨关窗将大棚关死，若不想关死则发送停止命令；\r\n
		2.11：“设置第一档30”->修改设置第一档的长度为30cm；注意，设置的值不得超过50cm ；\r\n
		2.12：“设置第二档5”->修改设置第二档的长度为5cm；注意，设置的值不得超过50cm ；\r\n
		2.13：“设置自由档20”->修改设置自由档的长度为20cm；注意，设置的值不得超过50cm ；\r\n
		2.14：“设置总长150” ->修改设置，电机最大长度为150cm；注意，设置的值不得低于50cm ；\r\n
		2.15：“上限温度32”  ->修改设置，“适宜温度上限”改为32℃；\r\n
		2.16：“下限温度28”  ->修改设置，“适宜温度下限”28℃；\r\n
		2.17：“开风温度24”   ->修改设置，“开风温度”24℃；\r\n
		2.18：“关风温度20”   ->修改设置，“关风温度”20℃；\r\n
		2.19：“报警高温35”   ->修改设置，“关风温度”35℃，同时打开高温报警功能；\r\n
		2.20：“报警低温15”   ->修改设置，“关风温度”15℃；同时打开低温报警功能；\r\n\r\n

		注意：\r\n\r\n

		a.多条命令需要执行则以“&amp;”进行分隔；\r\n
		b.无效的命令或者不满足限制的命令将直接被抛弃。\r\n
		c.发送短信的手机的手机号码必须在温控机中进行设置，即手机号码必须是温控机中主手机号码或从2手机号码或从3手机号码中的一个。\r\n
	</string>
	<string name="help_content_set_win">
	1.在参数设置界面，点击窗口数量选区，会弹出窗口数量的下拉框，此时用户可以选择需要的窗口数量，然后点击保存按钮保存选择，然后生效。\r\n
	2.然后回到网络控制界面或者短信控制界面时，就会发现窗口数量和刚才参数设置的窗口数量一致。\r\n
	</string>
	<string name="help_content_setting">
	1.在参数设置界面，可以对相关参数进行设置 ，完成输入后点击 按钮来保存刚才的输入结果，然后生效。\r\n
	2.主手机号码：用来储存本机号码，多个大棚共享此信息，用来作为与温控机交互的根据，请如实填写。\r\n
	3.温控机号码：用来联系大棚温控机的根据，每个大棚都需要配置一个温控机号码用来联系每个大棚的温控机。\r\n
	4.大棚名称：用来方便记忆管理大棚的别名，本软件将使用该名称来提示用户，每个大棚需要取一个别名。\r\n
	5.风口数量：用来配置针对某个大棚需要管理的风口数量，应当与温控机配置相同。\r\n
	6.最高温度：用来配置某个大棚的最高温度。\r\n
	7.最低温度：用来配置某个大棚的最低温度。\r\n
	8.温度上限温差：用来配置某个大棚的最高温度上限。\r\n
	9.温度下限温差：用来配置某个大棚的最低温度下限。\r\n
	10.风口打开至最大的链条长度：用来配置某个大棚的拉开的最大距离。\r\n
	11.风口打开第一档的链条长度：用来配置某个大棚的拉开第一档的距离。\r\n
	12.通风时间长度：用来配置某个大棚的通风时间长度。\r\n
	13.夜间模式开启时间：用来配置某个大棚的夜间模式开启时间。\r\n
	14.夜间模式结束时间：用来配置某个大棚的夜间模式结束时间。\r\n
	17．读取温控机参数：用来同步与温控机的参数，点击后可以将对应大棚的相关信息同步到手机并储存。\r\n
	</string>
	<string name="help_content_set_house">
	1.手机端支持同时管理多个大棚，若要管理多个大棚可以在参数设置中点击添加新大棚按钮进行添加，当点击后会显示要求输入大棚名称的对话框，
	填写名称后点击添加，添加完成后新的大棚会显示在大棚选项卡中。 \r\n
	可以点击大棚名选项卡切换大棚，切换后相关数据都会切换到对应大棚的数据。在某个大棚选项卡的操作都是针对该大棚的，若要对其他的大棚进行操作可以用大棚选项卡进行切换后再进行操作。
	2.若要对大棚进行重新命名则可以在参数设置下大棚名称进行相应设置即可。\r\n
	3.若要删除某个大棚只需在需要删除的大棚下，在参数设置中点击删除此大棚按钮 点击后会显示确认对话框，当点击确定后会将该大棚删除并将所有的相关数据进行清空。\r\n
	</string>
	<string name="help_content_share">
	1.若是想要将软件信息分享给其他用户可以点击分享按钮来进行分享。\r\n
	2.点击分享按钮后会显示分享渠道选择，点击选择需要分享的渠道就会进行相应的分享。\r\n
	</string>
	<string name="help_content_set_function">
	1.若是需要对软件功能进行设置，需要点击标题栏左上方的菜单键或者从屏幕左侧边沿向右划，此时会显示滑动菜单界面。\r\n
	2.在菜单界面的左下角点击进入设置可以进入设置界面进行相关功能的设置。\r\n
	3.消息声音及消息震动为来温度信息或推送信息时发出声音与震动的开关。\r\n
	</string>
    <string name="tab_browse">浏览</string>
    <string name="tab_news">新闻</string>
    <string name="tab_quick">快速发帖</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    <string name="tab_net_control">网络控制</string>
    <string name="tab_msg_control">短信控制</string>
    <string name="tab_setting">参数配置</string>
    <string name="title_net_control">温室大棚网络控制</string>
    <string name="title_msg_control">温室大棚短信控制</string>
    <string name="title_setting">大棚参数设置</string>
    <string name="back">返回</string>
    <string name="link_state">连接状态 </string>
    <string name="link_state_null">无连接 </string>
    <string name="close_window">关闭风口</string>
    <string name="open_window">打开风口</string>
    <string name="stop">停机</string>
    <string name="load_tem">读取温度</string>
    <string name="load_water">读取湿度</string>
    <string name="current_tem">当前温度</string>
    <string name="current_water">当前湿度</string>
    <string name="current_light">当前照度信息</string>
    <string name="load_light">读取照度信息</string>
    <string name="temp_tip">当前处于夜间模式</string>
    <string name="mode_tip">当前正处于手动模式</string>
    <string name="mode_tip_auto">当前正处于自动模式</string>
    <string name="main_info">总体信息</string>
    <string name="close_link">关闭连接</string>
    <string name="resume_link">重新连接</string>
    <string name="linking">正在连接</string>
    <string name="re_link">重新连接</string>
    <string name="clear_msg">清除消息</string>
    <string name="receive_msg">接受到的消息</string>
    <string name="net_control">网络操作</string>
    <string name="msg_feedback">信息回馈</string>
    <string name="base_setting">基本设置</string>
    <string name="main_phone_mun">主手机号码</string>
    <string name="tem_machine_num">温控机号码</string>
    <string name="phone_mun_two">从2手机号码</string>
    <string name="phone_mun_three">从3手机号码</string>
    <string name="tem_machine_match_num">温控机匹配号</string>
    <string name="highest_tem">适宜温度上限(单位：℃)</string>
    <string name="lowest_tem">关风温度(单位：℃)</string>
    <string name="difference_upper_limit">适宜温度下限(单位：℃)</string>
    <string name="difference_lower_limit">开风温度(单位：℃)</string>
    <string name="open_len">风口打开至最大的链条长度(单位:厘米)</string>
    <string name="open_len_first">风口打开第一档的链条长度(单位:厘米)</string>
    <string name="ventilation_time">通风时间长度(分钟)</string>
    <string name="open_window_time">夜间模式开始时间</string>
    <string name="close_window_time">夜间模式结束时间</string>
    <string name="control_way">控制方式:</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="set_time_title">设置时间信息</string>
    <string name="please_select_time">请选择时间</string>
    <string name="mode_auto">自动模式</string>
    <string name="mode_rain_open">下雨关风：开</string>
    <string name="mode_rain_close">下雨关风：关</string>
    <string name="mode_wind_open">放晨风：开</string>
    <string name="mode_wind_close">放晨风：关</string>
    <string name="mode_high_auto">高温自动切换</string>
    <string name="mode_manually">手动模式</string>
    <string name="share_qq">QQ</string>
    <string name="share_we">微信</string>
    <string name="share_friend">朋友圈</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_other">其他</string>
    <string name="share">分享</string>
    <string name="refresh">刷新</string>
    <string name="history">消息历史记录</string>
    <string name="item_news">菜农之家</string>
    <string name="item_water">水肥一体化</string>
    <string name="item_light">照度管理</string>
    <string name="peng_manager">大棚管理</string>
    <string name="user_name">用户名</string>
    <string name="about">关于软件</string>
    <string name="help">帮助</string>
    <string name="login">登录</string>
    <string name="resign">注册</string>
    <string name="modify">修改</string>
	<string name="to_resign"><u>还没有帐号？那就去注册吧</u></string>
	<string name="forget_pwd"><u>忘记密码了？</u></string>
	<string name="hint_nickname">请输入用户名</string>
	<string name="hint_username">请输入手机号</string>
	<string name="hint_password">请输入密码</string>
	<string name="hint_password_old">请输入旧密码</string>
	<string name="hint_password_again">请再输入密码</string>
	<string name="hint_code">请输入验证码</string>
	<string name="get_code">获取短信验证码</string>
	<string name="get_voice_code">短信验证码收不到？可以试试语音验证码</string>
    <string name="find_scan">扫一扫</string>
    <string name="search">搜索</string>
</resources>