<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_8"
		android:layout_marginTop="20dp">

        <LinearLayout style="@style/item_input_container" >

            <AutoCompleteTextView
                android:id="@+id/login_user_name"
                style="@style/item_input_edittext"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
				android:inputType="number"/>

            <ImageView
                android:id="@+id/login_name_clear"
                style="@style/item_input_clear"
                android:contentDescription="@null"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            style="@style/item_input_container"
            android:layout_marginTop="@dimen/space_16" >

            <EditText
                android:id="@+id/login_user_old_pwd"
                style="@style/item_input_edittext"
                android:hint="@string/hint_password_old"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/login_pwd_old_clear"
                style="@style/item_input_clear"
                android:contentDescription="@null"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            style="@style/item_input_container"
            android:layout_marginTop="@dimen/space_16" >

            <EditText
                android:id="@+id/login_user_pwd"
                style="@style/item_input_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/login_pwd_clear"
                style="@style/item_input_clear"
                android:contentDescription="@null"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            style="@style/item_input_container"
            android:layout_marginTop="@dimen/space_16" >

            <EditText
                android:id="@+id/login_user_pwd_again"
                style="@style/item_input_edittext"
                android:hint="@string/hint_password_again"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/login_pwd_clear_again"
                style="@style/item_input_clear"
                android:contentDescription="@null"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/button_common_blue"
            android:layout_marginTop="30dp"
            android:text="@string/modify" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textColor="@color/lightblue"
            android:gravity="right"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"/>
        
    </LinearLayout>

</ScrollView>
