<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_16" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_share_weichat_circle"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechatfriends_selector"
                android:text="@string/share_friend" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_weichat"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechat_selector"
                android:text="@string/share_we" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_qq"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_qq_selector"
                android:text="@string/share_qq" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
		android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ly_share_qzone"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_qzone"
                android:text="@string/share_qzone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_other"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_more"
                android:text="@string/share_other" />
        </LinearLayout>

        <LinearLayout
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_qq_selector"
                android:text="@string/share_qq"  
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>